Version 2.5.0
~~~~~~~~~~~~
* Post DiFX-2.4
* python functions errormon, errormon2, cpumon, mk5mon, statemon: explicitly capture ctrl-C
  - seemingly needed for some operating systems ???
* mk5mon (ver 0.6):
	- obtain station codes from difxdb (if enabled) and display them
	- check for mk5daemon inactivity
	- add options to set multicast group/port
	- color coded output in case of errors

Version 2.4.0
~~~~~~~~~~~~~
* Increase receive buffer size for binary receives
* Add function to send DifxStop message
* utils/difxwatch: added socket timeout, and changed the 'tag' to check for a job start
* Add input file name to Alert and Status messages as <input> tags in the <body>
* Version for DiFX-2.4, Nov 4, 2014

Version 2.3.0
~~~~~~~~~~~~~
* DifxMessageMk5Control message type added
* Version for DiFX-2.3, Dec 20, 2013

Version 2.2.0
~~~~~~~~~~~~~
Support for IPv6 within C code.  Likely overall performance improvement at the same time
  - python code, such as errormon, statemon, ..., are not yet converted.
  - warning: all code linking to difxmessage that might use IPv6 should change
    the size of from[] to DIFX_MESSAGE_MAX_INET_ADDRESS_LENGTH or face
    possible segfaulting
NOTE: these changes have been backed out until a concurrency issue is fixed
After a period of deprecation finally removed difxMessageSendCondition().  Use
  difxMessageSendDriveStats() instead.
Prefer to use new function DifxMessageSend2 over DifxMessageSend.  It is more
  efficient.
Allow spoofed hostname via the difxMessageInitFull() function.  Perhaps useful in
  cases where multiple interfaces exist on the same machine?
Version for DiFX-2.2, May 31, 2013

Version 2.1.0
~~~~~~~~~~~~
Version number change prior to DiFX-2.1
Version for DiFX-2.1, May 4, 2012

Version 2.0.2
~~~~~~~~~~~~~
Add new Mark5 states "booting", "recording" and "copyto"
Add new Mark5 state "record"
Add SMART monitor message type for disk diagnostics
  one document per disk (i.e., 8 per module)